package viewservice.view_mediator;

public interface MediatorMemberInterface {
    void setMediator(ViewMediatorInterface mediator);
}
